--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node": "^20.13.1",
     "pdfkit": "^0.15.0",
     "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
     "session-file-store": "^1.5.0",
     "sqlite3": "^5.1.7"
   },
