--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "init": "^0.1.2",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.3.1",
     "moment-timezone": "^0.5.45",
@@ -40,7 +41,10 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test concurrently \"./node_modules/.bin/mocha\" \"nodemon index.js\"",
     "start": "nodemon index.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "migrate:dev": "npx sequelize-cli db:migrate",
+    "migrate:test": "NODE_ENV=test npx sequelize-cli db:migrate",
+    "migrate:prod": "NODE_ENV=production npx sequelize-cli db:migrate"
   },
   "author": "",
   "license": "ISC",
