--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "init": "^0.1.2",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "mariadb": "^3.3.1",
     "moment-timezone": "^0.5.45",
     "mysql": "^2.18.1",
     "node": "^20.13.1",
     "pdfkit": "^0.15.0",
+    "react-leaflet": "^4.2.1",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "session-file-store": "^1.5.0",
