--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.8.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.1.0",
@@ -11,7 +12,9 @@
     "express-flash": "^0.0.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
     "helmet": "^7.1.0",
+    "https": "^1.0.0",
     "init": "^0.1.2",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
@@ -43,7 +46,8 @@
   "main": "index.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test concurrently \"./node_modules/.bin/mocha\" \"nodemon index.js\"",
-    "start": "nodemon index.js",
+    "start:dev": "NODE_ENV=development nodemon index.js",
+    "start:prod": "NODE_ENV=production nodemon index.js",
     "lint": "eslint .",
     "migrate:dev": "npx sequelize-cli db:migrate",
     "migrate:test": "NODE_ENV=test npx sequelize-cli db:migrate",
