--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "node-cache": "^5.1.2",
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.15.0",
+    "pg": "^8.14.0",
+    "pg-hstore": "^2.3.4",
     "react-leaflet": "^4.2.1",
-    "sequelize": "^6.37.3",
+    "sequelize": "^6.37.6",
     "sequelize-cli": "^6.6.2",
     "session-file-store": "^1.5.0",
     "sqlite3": "^5.1.7"
