--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "curso-node",
-  "version": "1.0.0",
+  "name": "Api-crianca-feliz",
+  "version": "2.0.0",
   "main": "dist/server.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development npx ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
