--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "moment-timezone": "^0.5.45",
