--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "leaflet": "^1.9.4",
     "moment-timezone": "^0.5.45",
     "node-cache": "^5.1.2",
-    "nodemailer": "^6.9.13",
+    "nodemailer": "^6.10.1",
     "pdfkit": "^0.15.0",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -55,7 +56,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20.12.12",
-    "@types/nodemailer": "^6.4.15",
+    "@types/nodemailer": "^6.4.19",
     "@types/pdfkit": "^0.13.4",
     "@types/session-file-store": "^1.2.5",
     "cross-env": "^7.0.3",
@@ -63,8 +64,9 @@
     "globals": "^15.8.0",
     "jest": "^29.7.0",
     "prisma": "5.12.1",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.9.2"
   },
   "author": "",
   "license": "ISC",
