--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-async-errors": "^3.1.1",
     "express-flash": "0.0.2",
     "express-handlebars": "^7.1.2",
+    "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "ioredis": "^5.7.0",
